logs/syscon-nc.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/syscon-nc'...
Compiling './lib/python3.5/site-packages/syscon-nc/client.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (client.py, line 54)
Compiling './lib/python3.5/site-packages/syscon-nc/control.py'...
***   File "./lib/python3.5/site-packages/syscon-nc/control.py", line 9
    print "Connection object to " + computername + " (IP " + socket.gethostbyname(computername) + ") on port " + str(port)
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/syscon-nc/pyscreen.py'...
***   File "./lib/python3.5/site-packages/syscon-nc/pyscreen.py", line 10
    print "waiting for screenshot..."
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/syscon_nc-0.4.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
